<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:textIsSelectable="true"
    tools:context=".fragment.MovieFieldsDetailFragment">

    <TextView
        android:id="@+id/movie_detail_plot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="10"
        android:minLines="3"
        android:text="plot"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_detail_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_detail_plot" />

    <TextView
        android:id="@+id/movie_detail_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_movie_runtime"
        android:drawableStart="@drawable/ic_movie_runtime"
        android:gravity="center_vertical"
        android:text="runtime"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_detail_gender"
        tools:drawableLeft="@drawable/ic_movie_runtime" />

    <TextView
        android:id="@+id/movie_detail_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="runtime"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        tools:drawableLeft="@drawable/ic_movie_rating"
        android:drawableLeft="@drawable/ic_movie_rating"
        android:drawableStart="@drawable/ic_movie_rating"
        android:gravity="center_vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_detail_gender"
        app:layout_constraintLeft_toRightOf="@id/movie_detail_runtime" />

    <TextView
        android:id="@+id/movie_detail_imdb_votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_movie_imdb_votes"
        android:drawableStart="@drawable/ic_movie_imdb_votes"
        android:gravity="center_vertical"
        android:text="imdb_votes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_detail_rating"
        tools:drawableLeft="@drawable/ic_movie_imdb_votes" />

    <TextView
        android:id="@+id/movie_detail_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_web"
        android:drawableStart="@drawable/ic_web"
        android:gravity="center_vertical"
        android:text="website"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="?attr/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_detail_imdb_votes"
        tools:drawableLeft="@drawable/ic_web" />

    <TextView
        android:id="@+id/movie_detail_production"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_movie_production"
        android:drawableStart="@drawable/ic_movie_production"
        android:gravity="center_vertical"
        android:text="production"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_detail_website"
        tools:drawableLeft="@drawable/ic_movie_production" />

    <TextView
        android:id="@+id/movie_detail_box_office"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_movie_detail_box_office"
        android:drawableStart="@drawable/ic_movie_detail_box_office"
        android:gravity="center_vertical"
        android:text="box office"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_detail_production"
        tools:drawableLeft="@drawable/ic_movie_detail_box_office" />

    <!-- nestedscrollview hides the last field -->
    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_detail_box_office"/>

</android.support.constraint.ConstraintLayout>
